--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
